# AI-Assistant-for-GIGABYTE-AORUS-MASTER-16-AM6H

./: README.md  main.py  outotu_llama_3b_q4.txt  output_qwen_1.5b_q8  output_qwen_3b_q4.txt  pyproject.toml  資源有限的消費級筆電的ai硬體小幫手.py
