[project]
name = "aorus-rag-assistant"
version = "0.1.0"
description = "資源有限的消費級筆電的AI硬體小幫手"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "llama-cpp-python>=0.3.20",
    "numpy>=2.4.4",
    "requests>=2.33.1",
    "sentence-transformers>=5.3.0",
]
